app/javascript/styles/mastodon/components.scss
/* ... */
.gifv {
  video {
    max-width: 100vw;
    max-height: 80vh;
  }
}

.scrollable .account-card {
  margin: 10px;
}

.scrollable .account-card__title__avatar {
  img,
  .account__avatar {
    border-color: lighten($ui-base-color, 8%);
  }
}

.scrollable .account-card__bio::after {
  background: linear-gradient(to left, var(--background-color), transparent);
}

.account-gallery__container {
  display: flex;
  flex-wrap: wrap;
  padding: 4px 2px;
}

.account-gallery__item {
  border: 0;
  box-sizing: border-box;
  display: block;
  position: relative;
  border-radius: 4px;
  overflow: hidden;
  margin: 2px;

  &__icons {
    position: absolute;
    top: 50%;
    inset-inline-start: 50%;
    transform: translate(-50%, -50%);
    font-size: 24px;
  }
}

.notification__filter-bar,
.account__section-headline {
  border: 1px solid var(--background-border-color);
  border-top: 0;
  cursor: default;
  display: flex;
  flex-shrink: 0;

  @media screen and (max-width: $no-gap-breakpoint) {
    border-right: 0;
    border-left: 0;
  }

  button {
    background: transparent;
    border: 0;
    margin: 0;
  }

  button,
  a {
    display: block;
    flex: 1 1 auto;
    color: $darker-text-color;
    padding: 15px 0;
    font-size: 14px;
    font-weight: 500;
    text-align: center;
    text-decoration: none;
    position: relative;
    width: 100%;
    white-space: nowrap;

    &.active {
      color: $primary-text-color;

      &::before {
        display: block;
        content: '';
        position: absolute;
        bottom: -1px;
        left: 50%;
        transform: translateX(-50%);
        width: 40px;
        height: 3px;
        border-radius: 4px 4px 0 0;
        background: $highlight-text-color;
      }
    }
  }

  .scrollable & {
    border-left: 0;
    border-right: 0;
  }
}

.filter-form {
  border-bottom: 1px solid var(--background-border-color);

  &__column {
    display: flex;
    flex-direction: column;
    gap: 15px;
    padding: 15px;
  }

  .radio-button {
    display: flex;
  }
}

.column-settings__row .radio-button {
  display: flex;
}

.radio-button,
.check-box {
  font-size: 14px;
  position: relative;
  display: inline-flex;
  align-items: center;
  line-height: 18px;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  cursor: pointer;
  gap: 10px;
  color: $secondary-text-color;

  input[type='radio'],
  input[type='checkbox'] {
    display: none;
  }

  &__input {
    display: flex;
    align-items: center;
    justify-content: center;
    position: relative;
    border: 2px solid $secondary-text-color;
    box-sizing: border-box;
    width: 20px;
    height: 20px;
    flex: 0 0 auto;
    border-radius: 50%;

    &.checked {
      border-color: $ui-highlight-color;

      &::before {
        position: absolute;
        left: 2px;
        top: 2px;
        content: '';
        display: block;
        border-radius: 50%;
        width: 12px;
        height: 12px;
        background: $ui-highlight-color;
      }
    }

    .icon {
      width: 18px;
      height: 18px;
    }
  }
}

.check-box {
  &__input {
    width: 18px;
    height: 18px;
    border-radius: 2px;

    &.checked {
      background: $ui-highlight-color;
      color: $white;

      &::before {
        display: none;
      }
    }
  }
}

::-webkit-scrollbar-thumb {
  border-radius: 0;
}

noscript {
  text-align: center;

  img {
    width: 200px;
    opacity: 0.5;
    animation: flicker 4s infinite;
  }

  div {
    font-size: 14px;
    margin: 30px auto;
    color: $secondary-text-color;
    max-width: 400px;

    a {
      color: $highlight-text-color;
      text-decoration: underline;

      &:hover {
        text-decoration: none;
      }
    }
  }
}

@keyframes flicker {
  0% {
    opacity: 1;
  }

  30% {
    opacity: 0.75;
  }

  100% {
    opacity: 1;
  }
}

.embed-modal {
  width: auto;
  max-width: 80vw;
  max-height: 80vh;

  h4 {
    padding: 30px;
    font-weight: 500;
    font-size: 16px;
    text-align: center;
  }

  .embed-modal__container {
    padding: 10px;

    .hint {
      margin-bottom: 15px;
    }

    .embed-modal__html {
      outline: 0;
      box-sizing: border-box;
      display: block;
      width: 100%;
      border: 0;
      padding: 10px;
      font-family: $font-monospace, monospace;
      background: $ui-base-color;
      color: $primary-text-color;
      font-size: 14px;
      margin: 0;
      margin-bottom: 15px;
      border-radius: 4px;

      &::-moz-focus-inner {
        border: 0;
      }

      &::-moz-focus-inner,
      &:focus,
      &:active {
        outline: 0 !important;
      }

      &:focus {
        background: lighten($ui-base-color, 4%);
      }

      @media screen and (width <= 600px) {
        font-size: 16px;
      }
    }

    .embed-modal__iframe {
      width: 400px;
      max-width: 100%;
      overflow: hidden;
      border: 0;
      border-radius: 4px;
    }
  }
}

.moved-account-banner,
.follow-request-banner,
.account-memorial-banner {
  padding: 20px;
  background: var(--surface-background-color);
  display: flex;
  align-items: center;
  flex-direction: column;

  &__message {
    color: $darker-text-color;
    padding: 8px 0;
    padding-top: 0;
    padding-bottom: 4px;
    font-size: 14px;
    font-weight: 500;
    text-align: center;
    margin-bottom: 16px;
  }

  &__action {
    display: flex;
    justify-content: space-between;
    align-items: center;
    gap: 15px;
    width: 100%;
  }

  .detailed-status__display-name {
    margin-bottom: 0;
  }
}

.follow-request-banner .button {
  width: 100%;
}

.account-memorial-banner__message {
  margin-bottom: 0;
}

.column-inline-form {
  padding: 15px;
  display: flex;
  justify-content: flex-start;
  gap: 15px;
  align-items: center;
  border: 1px solid var(--background-border-color);
  border-top: 0;

  label {
    flex: 1 1 auto;

    input {
      width: 100%;
    }
  }
}
/* ... */

